--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,7 +2,18 @@
 # Controls when the workflow will run
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        description: "Choose environment"
+        required: true
+        default: "staging"
+        type: choice
+        options:
+        - staging
+        - production
 
+
+    
 jobs:
  deploy:
     runs-on: ubuntu-latest 
